// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     expenses totalling 
    $5.55
     
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with mutiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     expenses totalling 
    $25.25
     
  </h1>
</div>
`;
